# comm_ipc

./: .gitignore  README.md  pyproject.toml
.agents/skills/comm-ipc/: SKILL.md
.agents/skills/comm-ipc/references/: API_REFERENCE.md  ARCHITECTURE.md  PATTERNS.md
.agents/skills/comm-ipc/scripts/: app_decorator_api.py  bridge_federation.py  client_rpc.py  fastapi_integration.py  server_setup.py
.github/workflows/: publish.yml
benchmark/: bench_group.py  bench_pubsub.py  bench_rpc.py  bench_stream.py  run.py  utils.py
comm_ipc/: __init__.py  api.py  app.py  bridge.py  channel.py  cli.py  client.py  comm_data.py  config.py  group.py  security.py  server.py  utils.py
comm_ipc/.agents/skills/comm-ipc/: SKILL.md
comm_ipc/.agents/skills/comm-ipc/references/: API_REFERENCE.md  CLI.md  PATTERNS.md
comm_ipc/.agents/skills/comm-ipc/scripts/: app_decorator_api.py  bridge_federation.py  client_file_sharing.py  client_pubsub.py  client_rpc.py  client_stream.py  fastapi_file_websocket.py  fastapi_integration.py  ipc_to_ipc_processing.py  server_setup.py  system_monitor.py  test_cli.py  ws_input_stream.py
examples/: decorator_client.py  decorator_prov.py  decoupled_demo.py  fastapi_integration.py  pub_prov.py  rpc_client.py  rpc_prov.py  run_demos.sh  server.py  stream_client.py  stream_prov.py  sub_client.py
tests/: base.py  test_advanced_mgmt.py  test_app_decorators.py  test_bridge.py  test_concurrency_stress.py  test_core.py  test_coverage_edge.py  test_fastapi_api.py  test_federated_routing.py  test_gateway_exhaustive.py  test_group_lb.py  test_multi_hub.py  test_pubsub_notifications.py  test_pydantic_advanced.py  test_pydantic_dynamic.py  test_pydantic_validation.py  test_readme_snippets.py  test_registration_lock.py  test_reserved_names.py  test_security.py  test_stream.py  test_strict_async.py  test_subscription_lifecycle.py  test_traceability.py  test_zero_trust_verification.py
