[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comm-ipc"
version = "0.1.3"
authors = [
    { name="shashstormer", email="shashanka5398@gmail.com" },
]
license = { file = "LICENSE.txt" }
description = "A lightweight IPC library with bridge and streaming support"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0",
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
where = ["."]
include = ["comm_ipc"]
